# amplifier-module-storage-localfirst

./: .gitignore  README.md  pyproject.toml
src/amplifier_module_storage_localfirst/: __init__.py  errors.py  protocol.py  sqlite.py  types.py
tests/: test_local_first_storage.py
